--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -172,14 +172,14 @@ en:
     ttfive: From 1 to 8 lines of text.
     ttsix: "High Resolution print: 180 dpi."
     ttseven: Message creation in any font and in any language.
-    tabs_three_bottom: From emerging businesses with 1 small production line to
+    tabs_three_bottom: Endless opportunities
     tabs_four: Connectivity
     tabs_four_title: One software to manage all your printers.
     tabs_four_description: "Ethernet, USB and RS232 connectivity are available for networking so multiple Foenix printers can be managed from one place:"
     tabs_four_two: monitor progress, track fault, change settings and more.
     tabs_four_three: "Full integration with our DLL (Dynamic Link Library) can be used by a third party developer to incorporate into their own applications."
     tabs_four_four: "Integrate to a factory network system or connect to industrial scanners, encoders, check weighers or other equipment as required."
-    tabs_four_bottom: From emerging businesses with 1 small production line to
+    tabs_four_bottom: Limitless information
     printer: Printer
     fxone_subtext: Helping businesses improve efficiency and lower production costs
     #FOURTH SECTION
