Fixed martin changes barring an icon change which is not present in the asset pipeline

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -155,13 +155,14 @@ en:
     tabs_title: One software with tons of features
     tabs_one: Savings
     tabs_one_title: Reduced print costs - typically from 50% to 80%
-    tabs_one_description: From emerging businesses with 1 small production line to multinational corporations with the most demanding applications, use the FX ONE printer to lower your coding and marking costs, prevent downtime,
+    tabs_one_description: You are in control of your cost per print. Easily calculate your printing costs with our intuitive software and see how much you could be saving. Printing with micro ink droplets and a sealed ink cartridge gives low cost per print with no ink wastage. Additional cost savings can be obtained using the ink saver mode. In addition to low cost per print our technology substantially reduces operating costs.
     tabs_one_desc_two: "Printing with micro ink droplets and a sealed ink cartridge gives low cost per print with no ink wastage. Additional cost savings can be obtained using the ink saver mode. In addition to low cost per print our technology substantially reduces operating costs."
     tabs_one_bottom: Clear and transparent returns on investment
     tabs_two: Simplicity
-    tabs_two_title: Two Zero Downtime, No Maintenance
-    tabs_two_description: "Foenix printers are manufactured with minimal components to give maximum reliability. No pumps, no valves, no compressed air, no droplet charging and no air filters means low maintenance and fewer problems. "
-    tabs_two_desc_two: "The Piezo technology used in the Foenix printer only needs a single sealed ink cartridge and does not require additional make-up solvent. This substantially reduces operating costs. Easily create messages with just a few clicks with no expertise required through our intuitive Interface that anyone can use."
+    tabs_two_title: Zero Downtime, No Maintenance
+    tabs_two_description: Foenix printers are manufactured with minimal components to give maximum reliability. No pumps, no valves, no compressed air, no droplet charging and no air filters means low maintenance and fewer problems.
+    tabs_two_desc_two: The Piezo technology used in the Foenix printer only needs a single sealed ink cartridge and does not require additional make-up solvent. This substantially reduces operating costs.
+    tabs_two_desc_three: Easily create messages with just a few clicks with no expertise required through our intuitive Interface that anyone can use.
     tabs_two_bottom: Robust and reliable design
     tabs_three: Flexibility
     tabs_three_title: To suit all production types
@@ -239,7 +240,7 @@ en:
     first_section_text: Wherever you are in the world, one of our distributors are close by. We are present on every continent and offer support in your language and time zone.
     second_section_title: Foenix has distributors in
     third_section_title: Interested in joining the Foenix Coding Family?
-    third_section_text:  We are excited to have a growing network of distribution partners marketing Foenix products around the world. We are currently inviting companies to join our international distributor network to promote our new range of printers to new markets.  Fill in this form and we will be in touch shortly to discuss this opportunity
+    third_section_text:  We are excited to have a growing network of distribution partners marketing Foenix products around the world. We are currently inviting companies to join our international distributor network to promote our new range of printers to new markets.  Fill in this form and we will be in touch shortly to discuss this opportunity. We are pleased to offer free in-house training to our new distributors.
 
   distributor_countries:
     uk: UK
