cookie and privacy done

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,6 +24,7 @@ en:
     careers: Careers
     news: News & Events
     privacy_policy: Privacy Policy
+    cookie_policy: Cookie Policy
 
   cookie_bar:
     content: By using this website, you agree to our
