changed some language

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -420,6 +420,7 @@ en:
 
   software:
     first_section_title_one: FX TOUCH CONTROLLER
+    first_section_title_two: "Programming without training: control your printer with just a touch through our smart FX Touch Controller."
     first_section_text_one: Programming without training
     first_section_text_two: control your printer with just a touch through our smart FX Touch Controller.
     first_section_text_three: We paid a lot of attention to the user interface design of the FX APP to simplify the workflow of your daily projects.
