changes requested made to home, standard, and remote, just waiting on brochure pdf for completion

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -114,6 +114,8 @@ en:
     title: Coding and Marking
     title_bottom: Made
     mobile_title: Coding and Marking Made
+    play: Play Video
+    download: Download Brochures
     title_span1: Easy
     title_span2: Reliable
     title_span3: Versatile
